compiler-tests/src/test/data/diagnostic/inject/InjectingAPlainObjectIsSus.kt
// RENDER_DIAGNOSTICS_FULL_TEXT
object ObjectClass

@Inject
class Example(obj: <!SUSPICIOUS_OBJECT_INJECTION_WARNING!>ObjectClass<!>)
